--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:clear": "npx typeorm schema:drop",
+    "migration:generate": "npx typeorm migration:generate --outputJs -n",
+    "migrate": "npx typeorm migration:run",
+    "migrate:refresh": "npm run db:clear && npm run migrate"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
@@ -27,6 +31,7 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
+    "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "express-session": "^1.17.1",
     "passport": "^0.4.1",
