--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-socket.io": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^7.6.15",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "express-session": "^1.17.1",
@@ -40,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
+    "socket.io": "3.1.2",
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
@@ -51,6 +54,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/passport-google-oauth20": "^2.0.6",
+    "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
