dockerised, updated ormconfig with env variables

--- a/sample.env
+++ b/sample.env
@@ -5,3 +5,8 @@ SESSION_SECRET=
 GOOGLE_CALLBACK_URL=
 GOOGLE_REDIRECT=
 CORS_ORIGIN=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_PORT=
+POSTGRES_HOST=
