--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     env_file: 
       - .env
     ports: 
-      - ${PORT}:${PORT}
+      - ${PORT}: ${PORT}
     links: 
-      - postgres:postgres
+      - postgres: postgres
     depends_on: 
       - postgres
     restart: unless-stopped
@@ -19,13 +19,13 @@ services:
     image: postgres:13.2
     restart: always
     ports: 
-      - 5432:5432
+      - 5432: ${POSTGRES_PORT}
     env_file: 
       - .env
     environment: 
-      - ${POSTGRES_USER}:${POSTGRES_USER}
-      - ${POSTGRES_PASSWORD}:${POSTGRES_PASSWORD}
-      - ${POSTGRES_DB}:${POSTGRES_DB}
+      - POSTGRES_USER: ${POSTGRES_USER}
+      - POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      - POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - ../pgdata:/var/lib/postgresql/data
+      - ../pgdata: /var/lib/postgresql/data
     
