upd: sample.env with description

--- a/sample.env
+++ b/sample.env
@@ -1,12 +1,27 @@
+# Default port set to 5000
 PORT=5000
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-SESSION_SECRET=
-GOOGLE_CALLBACK_URL=
-GOOGLE_REDIRECT=
-CORS_ORIGIN=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_PORT=
-POSTGRES_HOST=
+
+# A string of any arbitary length
+SESSION_SECRET=ABCDWXYZ
+
+# You would typically want to change localhost:5000 to your domain in production
+GOOGLE_CALLBACK_URL=http://localhost:5000/auth/google/callback
+
+# Redirect URL after google sign in
+# Default value set to http://localhost:3000/ assuming client runs of PORT 3000
+GOOGLE_REDIRECT=http://localhost:3000/
+
+# Give CORS Permissions to your client
+CORS_ORIGIN=http://localhost:3000/
+
+# Default ENV for postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=jv
+POSTGRES_PORT=5432
+
+# Change localhost to postgres container name when running in docker container
+POSTGRES_HOST=localhost
